--- a/lab/report/tsconfig.json
+++ b/lab/report/tsconfig.json
@@ -7,9 +7,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false,
+    "noImplicitAny": false/*,
     "types": [
       "d3"
-    ]
+    ]*/
   }
 }
