add by month and week chart

--- a/ycweb/src/main/resources/spring/data-access.properties
+++ b/ycweb/src/main/resources/spring/data-access.properties
@@ -12,7 +12,8 @@ jpa.showSql=true
 
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.driverClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-jdbc.url=jdbc:mysql://localhost:3306/api_log
+#jdbc.url=jdbc:mysql://localhost:3306/api_log
+jdbc.url=jdbc:mysql://centos.blurdev.com:3306/api_log
 jdbc.username=indigo
 jdbc.password=indigopwd
 
